--- a/signin.html
+++ b/signin.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <form action="login.php" method="POST">
+    <form action="http://localhost/Project_1/login.php" method="POST">
     <div class="container col-7 col-md-8 col-sm-6 mt-5">
         <div class="row text-center">
             <h1>Login</h1>
