--- a/Admin.html
+++ b/Admin.html
@@ -212,7 +212,7 @@
     
   </table>
 </section>
-    <!-- fotter -->
+    <!-- footer -->
 <hr>
 <div class="container-fluid back">
  <div class="row">
