designed user profile page

--- a/design.html
+++ b/design.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Banner-Heading-Image-images.css">
     <link rel="stylesheet" href="assets/css/Navbar-Right-Links-Dark-icons.css">
-    <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" href="css/design.css">
 
      
 </head>
