--- a/chatbot.html
+++ b/chatbot.html
@@ -269,7 +269,7 @@ const generateResponse = (chatElement) => {
         messageElement.textContent = data.choices[0].message.content.trim();
     }).catch(() => {
         messageElement.classList.add("error");
-        messageElement.textContent = "Oops! Something went wrong. Please try again.";
+        messageElement.textContent = "One of our representatives will contact you shortly. Thank You!";
     }).finally(() => chatbox.scrollTo(0, chatbox.scrollHeight));
 }
 
